src/Bindings/Binaryen/Raw.hs

{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}

module Bindings.Binaryen.Raw where

import Foreign
import Foreign.C

newtype Index = Index Word32
  deriving (Eq, Show)

newtype Type = Type Word32
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenTypeNone" typeNone :: Type
foreign import ccall unsafe "BinaryenTypeInt32" typeInt32 :: Type
foreign import ccall unsafe "BinaryenTypeInt64" typeInt64 :: Type
foreign import ccall unsafe "BinaryenTypeFloat32" typeFloat32 :: Type
foreign import ccall unsafe "BinaryenTypeFloat64" typeFloat64 :: Type
foreign import ccall unsafe "BinaryenTypeVec128" typeVec128 :: Type
foreign import ccall unsafe "BinaryenTypeFuncref" typeFuncref :: Type
foreign import ccall unsafe "BinaryenTypeAnyref" typeAnyref :: Type
foreign import ccall unsafe "BinaryenTypeNullref" typeNullref :: Type
foreign import ccall unsafe "BinaryenTypeExnref" typeExnref :: Type
foreign import ccall unsafe "BinaryenTypeUnreachable" typeUnreachable :: Type
foreign import ccall unsafe "BinaryenTypeAuto" typeAuto :: Type

foreign import ccall unsafe "BinaryenTypeCreate"
  typeCreate :: Ptr Type -> Word32 -> IO Type

foreign import ccall unsafe "BinaryenTypeArity"
  typeArity :: Type -> IO Word32

foreign import ccall unsafe "BinaryenTypeExpand"
  typeExpand :: Type -> Ptr Type -> IO ()

newtype ExpressionId = ExpressionId Word32
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenInvalidId" invalidId :: ExpressionId
foreign import ccall unsafe "BinaryenBlockId" blockId :: ExpressionId
foreign import ccall unsafe "BinaryenIfId" ifId :: ExpressionId
foreign import ccall unsafe "BinaryenLoopId" loopId :: ExpressionId
foreign import ccall unsafe "BinaryenBreakId" breakId :: ExpressionId
foreign import ccall unsafe "BinaryenSwitchId" switchId :: ExpressionId
foreign import ccall unsafe "BinaryenCallId" callId :: ExpressionId
foreign import ccall unsafe "BinaryenCallIndirectId" callIndirectId :: ExpressionId
foreign import ccall unsafe "BinaryenLocalGetId" localGetId :: ExpressionId
foreign import ccall unsafe "BinaryenLocalSetId" localSetId :: ExpressionId
foreign import ccall unsafe "BinaryenGlobalGetId" globalGetId :: ExpressionId
foreign import ccall unsafe "BinaryenGlobalSetId" globalSetId :: ExpressionId
foreign import ccall unsafe "BinaryenLoadId" loadId :: ExpressionId
foreign import ccall unsafe "BinaryenStoreId" storeId :: ExpressionId
foreign import ccall unsafe "BinaryenConstId" constId :: ExpressionId
foreign import ccall unsafe "BinaryenUnaryId" unaryId :: ExpressionId
foreign import ccall unsafe "BinaryenBinaryId" binaryId :: ExpressionId
foreign import ccall unsafe "BinaryenSelectId" selectId :: ExpressionId
foreign import ccall unsafe "BinaryenDropId" dropId :: ExpressionId
foreign import ccall unsafe "BinaryenReturnId" returnId :: ExpressionId
foreign import ccall unsafe "BinaryenHostId" hostId :: ExpressionId
foreign import ccall unsafe "BinaryenNopId" nopId :: ExpressionId
foreign import ccall unsafe "BinaryenUnreachableId" unreachableId :: ExpressionId
foreign import ccall unsafe "BinaryenAtomicCmpxchgId" atomicCmpxchgId :: ExpressionId
foreign import ccall unsafe "BinaryenAtomicRMWId" atomicRMWId :: ExpressionId
foreign import ccall unsafe "BinaryenAtomicWaitId" atomicWaitId :: ExpressionId
foreign import ccall unsafe "BinaryenAtomicNotifyId" atomicNotifyId :: ExpressionId
foreign import ccall unsafe "BinaryenAtomicFenceId" atomicFenceId :: ExpressionId
foreign import ccall unsafe "BinaryenSIMDExtractId" simdExtractId :: ExpressionId
foreign import ccall unsafe "BinaryenSIMDReplaceId" simdReplaceId :: ExpressionId
foreign import ccall unsafe "BinaryenSIMDShuffleId" simdShuffleId :: ExpressionId
foreign import ccall unsafe "BinaryenSIMDTernaryId" simdTernaryId :: ExpressionId
foreign import ccall unsafe "BinaryenSIMDShiftId" simdShiftId :: ExpressionId
foreign import ccall unsafe "BinaryenSIMDLoadId" simdLoadId :: ExpressionId
foreign import ccall unsafe "BinaryenMemoryInitId" memoryInitId :: ExpressionId
foreign import ccall unsafe "BinaryenDataDropId" dataDropId :: ExpressionId
foreign import ccall unsafe "BinaryenMemoryCopyId" memoryCopyId :: ExpressionId
foreign import ccall unsafe "BinaryenMemoryFillId" memoryFillId :: ExpressionId
foreign import ccall unsafe "BinaryenRefNullId" refNullId :: ExpressionId
foreign import ccall unsafe "BinaryenRefIsNullId" refIsNullId :: ExpressionId
foreign import ccall unsafe "BinaryenRefFuncId" refFuncId :: ExpressionId
foreign import ccall unsafe "BinaryenTryId" tryId :: ExpressionId
foreign import ccall unsafe "BinaryenThrowId" throwId :: ExpressionId
foreign import ccall unsafe "BinaryenRethrowId" rethrowId :: ExpressionId
foreign import ccall unsafe "BinaryenBrOnExnId" brOnExnId :: ExpressionId
foreign import ccall unsafe "BinaryenPushId" pushId :: ExpressionId
foreign import ccall unsafe "BinaryenPopId" popId :: ExpressionId

newtype ExternalKind = ExternalKind Word32
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenExternalFunction" externalFunction :: ExternalKind
foreign import ccall unsafe "BinaryenExternalTable" externalTable :: ExternalKind
foreign import ccall unsafe "BinaryenExternalMemory" externalMemory :: ExternalKind
foreign import ccall unsafe "BinaryenExternalGlobal" externalGlobal :: ExternalKind
foreign import ccall unsafe "BinaryenExternalEvent" externalEvent :: ExternalKind

newtype Features = Features Word32
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenFeatureMVP" featureMVP :: Features
foreign import ccall unsafe "BinaryenFeatureAtomics" featureAtomics :: Features
foreign import ccall unsafe "BinaryenFeatureBulkMemory" featureBulkMemory :: Features
foreign import ccall unsafe "BinaryenFeatureMutableGlobals" featureMutableGlobals :: Features
foreign import ccall unsafe "BinaryenFeatureNontrappingFPToInt" featureNontrappingFPToInt :: Features
foreign import ccall unsafe "BinaryenFeatureSignExt" featureSignExt :: Features
foreign import ccall unsafe "BinaryenFeatureSIMD128" featureSIMD128 :: Features
foreign import ccall unsafe "BinaryenFeatureExceptionHandling" featureExceptionHandling :: Features
foreign import ccall unsafe "BinaryenFeatureTailCall" featureTailCall :: Features
foreign import ccall unsafe "BinaryenFeatureReferenceTypes" featureReferenceTypes :: Features
foreign import ccall unsafe "BinaryenFeatureAll" featureAll :: Features

newtype Module = Module (Ptr Module)
  deriving (Eq, Show)

foreign import ccall unsafe "BinaryenModuleCreate"
  moduleCreate ::
    IO Module

foreign import ccall unsafe "BinaryenModuleDispose"
  moduleDispose ::
    Module -> IO ()

foreign import ccall unsafe "BinaryenConstInt32"
  constInt32 ::
    Module -> Int32 -> IO Expression

foreign import ccall unsafe "BinaryenConstInt64"
  constInt64 ::
    Module -> Int64 -> IO Expression

foreign import ccall unsafe "BinaryenConstFloat32"
  constFloat32 ::
    Module -> Float -> IO Expression

foreign import ccall unsafe "BinaryenConstFloat64"
  constFloat64 ::
    Module -> Double -> IO Expression

foreign import ccall unsafe "BinaryenConstVec128"
  constVec128 ::
    Module -> Ptr Word8 -> IO Expression

foreign import ccall unsafe "BinaryenConstFloat32Bits"
  constFloat32Bits ::
    Module -> Int32 -> IO Expression

foreign import ccall unsafe "BinaryenConstFloat64Bits"
  constFloat64Bits ::
    Module -> Int64 -> IO Expression

newtype Op = Op Int32
  deriving (Eq, Show)
